--- a/tsconfig.json
+++ b/tsconfig.json
@@ -74,5 +74,5 @@
 		"skipLibCheck": true /* Skip type checking of declaration files. */,
 		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
 	},
-	"include": ["src/respostas/desafio4.ts"]
+	"include": ["src/respostas/desafio4.ts", "src/search.ts"]
 }
